Add&Fix: モデルspec追加/リダイレクトパスの修正

--- a/app/views/blog/show.html.haml
+++ b/app/views/blog/show.html.haml
@@ -1,7 +1,7 @@
 %h1
   Title
   = @blog.title
-= link_to 'Back', :back
+= link_to 'Back', root_path
 - if @entrys.present?
   %table
     %caption Listing entries
