--- a/app/views/entry/new.html.haml
+++ b/app/views/entry/new.html.haml
@@ -1,7 +1,7 @@
 %h1
   New entry
   = @blog.title
-= link_to 'Back', :back
+= link_to 'Back', blog_path(@blog)
 
 = simple_form_for([@blog, @entry], url: { action: :create }) do |f|
   = f.input :title, label: "Title"
